<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/category"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/shop"
        android:title="@string/title_shopping" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/me"
        android:title="@string/title_me" />

</menu>
